# bustracksv

./: .gitignore  BusTrackSV.1.sql  BusTrackSV.env  BusTrackSV.sql  COMO_USAR_BUSCAR_RUTAS.md  DATOS_EXPANDIDOS_README.md  FRONTEND_GUIDE.md  Formulario_iniciodesesion.jsx  GUIA_RAPIDA_EXPANSION.md  INDICE_DOCUMENTACION.md  INICIO_RAPIDO.md  MAS_PARADAS_INSTRUCCIONES.md  Query para llamar las base de datos y para mostrarlos en el mapa de El Salvador  README.md  RESUMEN_EXPANSION.md  SISTEMA_RECOMENDACION.md  check_geometry.js  clean_icons_aggressive.py  config.env.example  configurar-todo.ps1  db.js  index.js  iniciar-servidor-con-datos.ps1  iniciar.ps1  package-lock.json  package.json  process_icons.py  reiniciar-postgres.ps1  remove_black_bg.py  resetear-password.ps1  start-dev.ps1  start-dev.sh
backend/: BusTrackSV.1.sql  BusTrackSV.env  BusTrackSV.sql  index.js  test-db.js
client/: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: index.css  main.jsx
client/src/api/: client.js
client/src/components/: ErrorBoundary.jsx  TestAutoComplete.jsx
client/src/contexts/: AuthContext.jsx
client/src/data/: aboutData.js
client/src/router/: index.jsx
client/src/services/: authService.js  detalleService.js  historialHelper.js  historialService.js  perfilService.js  routeService.js
frontend/client/: .env.example  package-lock.json
frontend/server/: config.example.json  docker-compose.yml  vcpkg.json
server/: .dockerignore  .gitignore  CMakeLists.txt  DATOS_REALES_RUTAS_SV.md  Dockerfile  README.md  START-SIMPLE.md  bustracksv.sqlite  config.example.js  datos-prueba.js  docker-compose.yml  find-password.js  import-completo-sqlite.js  import-expanded-data.js  import-expansion-masiva.js  import-real-data.js  import-rutas-ejemplo.js  import-super-expanded-data-sqlite.js  import-super-expanded-data.js  import-vmt-data.js  package-lock.json  package.json  test-connection.js  test-sqlite.js  verificar-datos-expandidos.js
server/config/: AppConfig.h
server/database/: cartorux_schema.sql  init.sql  migration_perfil_historial.sql  schema.sql
server/include/api/: AuthMiddleware.h  DatabaseConfig.h  JsonResponse.h
server/scripts/: README_CARTORUX.md  requirements_scraping.txt  scrape_cartorux.py
server/src/: db-postgres-backup.js  db-sqlite.js  db.js  index.js  main.cpp
server/src/config/: AppConfig.cpp
server/src/controllers/: UserController.cpp
server/src/utils/: JsonResponse.cpp
src/: App.jsx
(+28 files in other folders)
